--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,11 +26,13 @@
           <ion-card-title>Player One</ion-card-title>
           <ion-card-subtitle>Total Cards: {{gameState?.playerOnesCardCount}}</ion-card-subtitle>
         </ion-card-header>
-        <ion-card-content>
-          <img [src]="!(gameState?.playerOnesDraw?.cards?.length > 0) ? 'https://deckofcardsapi.com/static/img/back.png' : gameState?.playerOnesDraw?.cards[0]?.image" alt="card"
-               class="card"/>
+        <ion-card-content class="card-container">
+          <img [src]="'https://deckofcardsapi.com/static/img/back.png'" alt="card" class="card"/>
+          <ng-container *ngFor="let card of gameState?.playerOnesDraw?.cards">
+            <img [src]="card?.image" alt="card" class="card"/>
+          </ng-container>
         </ion-card-content>
-        <ion-button (click)="draw()" *ngIf="userId === 'playerOne'" [disabled]="gameState?.playerOnesDraw?.cards?.length > 0"
+        <ion-button (click)="draw()" *ngIf="userId === 'playerOne'" [disabled]="gameState?.playerOnesDraw?.drawComplete"
                     fill="clear">Draw
         </ion-button>
       </ion-card>
@@ -40,11 +42,13 @@
           <ion-card-title>Player Two</ion-card-title>
           <ion-card-subtitle>Total Cards: {{gameState?.playerTwosCardCount}}</ion-card-subtitle>
         </ion-card-header>
-        <ion-card-content>
-          <img [src]="!(gameState?.playerTwosDraw?.cards?.length > 0) ? 'https://deckofcardsapi.com/static/img/back.png' : gameState?.playerTwosDraw?.cards[0]?.image" alt="card"
-               class="card"/>
+        <ion-card-content class="card-container">
+          <img [src]="'https://deckofcardsapi.com/static/img/back.png'" alt="card" class="card"/>
+          <ng-container *ngFor="let card of gameState?.playerTwosDraw?.cards">
+            <img [src]="card?.image" alt="card" class="card"/>
+          </ng-container>
         </ion-card-content>
-        <ion-button (click)="draw()" *ngIf="userId === 'playerTwo'" [disabled]="gameState?.playerTwosDraw?.cards?.length > 0"
+        <ion-button (click)="draw()" *ngIf="userId === 'playerTwo'" [disabled]="gameState?.playerTwosDraw?.drawComplete"
                     fill="clear">Draw
         </ion-button>
       </ion-card>
