--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -4,11 +4,14 @@ ion-menu-button {
 
 #container {
   text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-45%);
+  .no-game {
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-45%);
+  }
 }
 
 #container strong {
